# backstage68

./: .env.prod  .env.test  .env.uat  .gitignore  .gitlab-ci.simple.yml  .gitlab-ci.yml  BUILD.md  BUILD_GUIDE.md  CHANGELOG.md  CROSS_PLATFORM_BUILD.md  ENV_CONFIG.md  KEYS_README.md  QUICK_START.md  README.md  README_WINDOWS.md  REFACTOR_COMPLETE.md  REFACTOR_GUIDE.md  REFACTOR_QUICKSTART.md  REFACTOR_SUMMARY.md  TEST_CRYPTO.md  WINDOWS_BUILD.md  WINDOWS_BUILD_SUMMARY.md  WINDOWS_QUICKSTART.md  WINDOWS_SETUP.md  build-linux.sh  build.ps1  build.sh  config.json  debug_check.js  env.prod  env.test  env.uat  fix-windows.ps1  package-lock.json  package.json  public_key.pem  rollup.config.js  test_tabs.html
.github/workflows/: build-release.yml  build-windows.yml  build.yml
.history/: .gitignore_20251124141704  .gitignore_20251124162023
.history/docs/: 开发进度记录_20251124133704.md  开发进度记录_20251124134141.md  开发进度记录_20251124145259.md  开发进度记录_20251124153100.md
.history/src/: inject_20251124154230.js
.history/src-tauri/: Cargo_20251124160238.toml  tauri.conf_20251124135648.json  tauri.conf_20251124153100.json  tauri.conf_20251124153948.json
docs/: CODING_GUIDELINES.md  开发进度记录.md
src/: inject-refactored.js  inject-simple-refactor.js  inject.js  inject.js.map
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.bak  tauri.template.json
src-tauri/capabilities/: default.json  main.json
src-tauri/capabilities/system/: webview.json
src-tauri/icons/: ICON_README.md  icon.icns
src-tauri/src/: crypto.rs  fingerprint.rs  lib.rs  main.rs  proxy.rs  security.rs
(+30 files in other folders)
