[package]
name = "backstage68"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "5.0"
hostname = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"

